Convert libs test-utils